Fixed vertical container overflow

--- a/src/app/styles/layout.scss
+++ b/src/app/styles/layout.scss
@@ -32,6 +32,8 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+
+    max-height: calc(100vh - 1.5rem * 2);
 }
 
 .content-wrapper {
